updating te databaseSeeder